--- a/src/app/components/terminal/terminal.component.html
+++ b/src/app/components/terminal/terminal.component.html
@@ -2,9 +2,9 @@
 
 <div class="container-fluid">
 	<div class="row g-2 h-100">
-		<div class="col col-8-5 h-100">
+		<div class="col h-100">
 			<div class="row g-2 h-100">
-				<div class="col col-3 h-70">
+				<div class="col col-2 h-70">
 					<app-symbol-list/>
 				</div>
 
@@ -18,8 +18,8 @@
 			</div>
 		</div>
 
-		<div class="col col-3-5 h-100">
-			<!--            <app-calculator/>-->
+		<div class="col col-2 h-100">
+			<app-bot/>
 		</div>
 	</div>
 </div>
