--- a/src/app/components/terminal/terminal.component.html
+++ b/src/app/components/terminal/terminal.component.html
@@ -13,7 +13,7 @@
 				</div>
 
 				<div class="col col-12 h-30 pb-2">
-					<!--                    <app-exec/>-->
+					<app-bot-list/>
 				</div>
 			</div>
 		</div>
