--- a/src/app/components/header/header-balance/header-balance.component.html
+++ b/src/app/components/header/header-balance/header-balance.component.html
@@ -1,4 +1,4 @@
 <div class="header item">
-	<span>${{ totalBalance }}</span>
+	<span>${{ balance }}</span>
 	<span>${{ availableBalance }}</span>
 </div>
