--- a/src/app/components/bot-list/bot-list.component.html
+++ b/src/app/components/bot-list/bot-list.component.html
@@ -94,11 +94,9 @@
 		</td>
 
 		<td class="actions">
-			<svg-icon [name]="'start'" *ngIf="result.status === botStatusEnum.stop || result.status === botStatusEnum.archive" (click)="onStatus(result.id, $event, botStatusEnum.add)"/>
+			<svg-icon [name]="'start'" *ngIf="result.status === botStatusEnum.stop" (click)="onStatus(result.id, $event, botStatusEnum.add)"/>
 			<svg-icon [name]="'stop'" *ngIf="result.status === botStatusEnum.add || result.status === botStatusEnum.run" (click)="onStatus(result.id, $event, botStatusEnum.stop)"/>
-
-			<svg-icon [name]="'delete'" *ngIf="result.status !== botStatusEnum.add && result.status !== botStatusEnum.run && result.status !== botStatusEnum.archive"
-					  (click)="onStatus(result.id, $event, botStatusEnum.archive)"/>
+			<svg-icon [name]="'delete'" *ngIf="result.status == botStatusEnum.stop" (click)="onStatus(result.id, $event, botStatusEnum.delete)"/>
 		</td>
 	</tr>
 </table>
