--- a/src/app/components/bot-list/bot-list.component.html
+++ b/src/app/components/bot-list/bot-list.component.html
@@ -63,7 +63,7 @@
 
 			<span class="current">
 				{{ result.currentParam.percentOut }}
-				<i *ngIf="result.deal.calculatePriceOut">{{ result.deal.calculatePriceOut }}</i>
+				<i *ngIf="result.deal.preparationPriceOut">{{ result.deal.preparationPriceOut }}</i>
 			</span>
 
 			<span class="next" *ngIf="result.nextParam.percentOut">{{ result.nextParam.percentOut }}</span>
