--- a/src/app/components/bot/bot-param/bot-param.component.html
+++ b/src/app/components/bot/bot-param/bot-param.component.html
@@ -39,4 +39,9 @@
 		<label>Стоп процент</label>
 		<app-form-input-number [name]="'stopPercent'" [widthMax]="true" [allowDecimal]="true" [maxDecimalLength]="2"/>
 	</div>
+
+	<div class="col col-6">
+		<label>Триггер старта</label>
+		<app-form-input-number [name]="'triggerStart'" [widthMax]="true" [allowDecimal]="true" [maxDecimalLength]="2"/>
+	</div>
 </div>
