--- a/src/app/components/bot-list/bot-list.component.scss
+++ b/src/app/components/bot-list/bot-list.component.scss
@@ -1,4 +1,4 @@
-:host {
+.bot-list {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -7,129 +7,160 @@
     border-radius: 0.2rem;
     height: 100%;
     overflow-y: auto;
-}
 
-table {
-    > tr {
-        &:not(:first-child) {
-            &.selected,
-            &:hover {
-                background: var(--gray-02);
-                cursor: pointer;
-            }
-        }
-
-        &:not(:last-child) {
-            > td {
-                border-bottom: 0.1rem solid var(--gray-02);
-            }
-        }
-
-        > th,
-        > td {
-            padding: 0.5rem;
-            white-space: nowrap;
-        }
-
-        > th {
-            position: sticky;
-            font-weight: normal;
-            background: #fff;
-            padding: 0.5rem;
-            top: 0;
-            cursor: pointer;
-
-            > div {
-                display: flex;
-                align-items: center;
-
-                //> input {
-                //    font-size: 0.7rem;
-                //    padding: 0 0.2rem;
-                //    margin-left: 0.5rem;
-                //    width: 2.2rem;
-                //    height: 1.5rem;
-                //}
-
-                > svg-icon {
-                    display: flex;
-                    align-items: center;
-                    margin-left: 0.2rem;
-                }
-            }
-
-            > svg-icon {
-                display: flex;
-                align-items: center;
-                fill: var(--gray-04);
-                width: 1.5rem;
-                height: 1.5rem;
-                margin-left: auto;
-
-                &[ng-reflect-name="toggle-on"] {
-                    fill: var(--blue-01);
-                }
-
+    table {
+        > tr {
+            &:not(:first-child) {
+                &.selected,
                 &:hover {
-                    fill: var(--blue-02);
+                    background: var(--gray-02);
                     cursor: pointer;
                 }
             }
 
-            &:after {
-                content: '';
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                right: 0;
-                border-bottom: 0.1rem solid var(--gray-02);
-                z-index: 2;
+            &:not(:last-child) {
+                > td {
+                    border-bottom: 0.1rem solid var(--gray-02);
+                }
             }
-        }
 
-        > td {
-            font-size: 0.8rem;
+            > th,
+            > td {
+                padding: 0.5rem;
+                white-space: nowrap;
+            }
 
-            &.actions {
-                text-align: right;
+            > th {
+                position: sticky;
+                font-weight: normal;
+                background: #fff;
+                padding: 0.5rem;
+                top: 3.2rem;
+                cursor: pointer;
+
+                > div {
+                    display: flex;
+                    align-items: center;
+
+                    //> input {
+                    //    font-size: 0.7rem;
+                    //    padding: 0 0.2rem;
+                    //    margin-left: 0.5rem;
+                    //    width: 2.2rem;
+                    //    height: 1.5rem;
+                    //}
+
+                    > svg-icon {
+                        display: flex;
+                        align-items: center;
+                        margin-left: 0.2rem;
+                    }
+                }
 
                 > svg-icon {
+                    display: flex;
+                    align-items: center;
                     fill: var(--gray-04);
-                    margin-left: 0.3rem;
+                    width: 1.5rem;
+                    height: 1.5rem;
+                    margin-left: auto;
 
-                    svg {
-                        width: 1rem;
-                        height: 1rem;
+                    &[ng-reflect-name="toggle-on"] {
+                        fill: var(--blue-01);
                     }
 
                     &:hover {
-                        fill: var(--blue-01);
+                        fill: var(--blue-02);
+                        cursor: pointer;
                     }
                 }
 
-                > svg-icon[ng-reflect-name="delete"]:hover {
-                    fill: var(--red-02);
+                &:after {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    right: 0;
+                    border-bottom: 0.1rem solid var(--gray-02);
+                    z-index: 2;
                 }
             }
 
-            .param {
-                display: flex;
-                gap: 0.3rem;
-                align-items: center;
+            > td {
+                font-size: 0.8rem;
 
-                .prev {
-                    color: var(--gray-04);
-                    font-size: 0.75rem;
+                &.actions {
+                    text-align: right;
+
+                    > svg-icon {
+                        fill: var(--gray-04);
+                        margin-left: 0.3rem;
+
+                        svg {
+                            width: 1rem;
+                            height: 1rem;
+                        }
+
+                        &:hover {
+                            fill: var(--blue-01);
+                        }
+                    }
+
+                    > svg-icon[ng-reflect-name="delete"]:hover {
+                        fill: var(--red-02);
+                    }
                 }
 
-                .current {
-                    font-weight: bold;
-                }
+                .param {
+                    display: flex;
+                    gap: 0.3rem;
+                    align-items: center;
 
-                .next {
-                    color: var(--blue-01);
-                    font-size: 0.7rem;
+                    .prev {
+                        color: var(--gray-04);
+                        font-size: 0.75rem;
+                    }
+
+                    .current {
+                        font-weight: bold;
+                    }
+
+                    .next {
+                        color: var(--blue-01);
+                        font-size: 0.7rem;
+                    }
                 }
+            }
+        }
+    }
+
+    > .actions {
+        display: flex;
+        justify-content: flex-start;
+        padding: 0.5rem;
+        background: #fff;
+        border-bottom: 0.1rem solid var(--component-border);
+        position: sticky;
+        top: 0;
+        z-index: 3;
+
+        form {
+            width: 100%;
+            display: flex;
+            align-items: center;
+        }
+
+        .btn-action {
+            color: #fff;
+            background: var(--blue-01);
+            padding: 0 0.9rem;
+            margin-left: 1rem;
+
+            &:hover,
+            &:focus,
+            &:active {
+                color: #fff;
+                background: var(--blue-02);
             }
         }
     }
